PaymentService Startup Failure resolved