@@ -13,11 +13,11 @@ public class JwtUtil {
 
     private final String secret;
 
-    public JwtUtil(@Value("${jwt.secret}") String secret) {
-        if (secret == null || secret.isBlank()) {
+    public JwtUtil(@Value("${jwt.secret:test-jwt-secret-key-for-development-only}") String secret) {
+        if (secret == null || secret.trim().isEmpty()) {
             throw new IllegalStateException("JWT secret is not configured. Set jwt.secret in environment or properties.");
         }
-        this.secret = secret;
+        this.secret = secret.trim();
     }
 
     private Key getSigningKey() {
